Compare with tthung

--- a/BKFoodCourt/BKFoodCourt/Views/Cart/Index.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Cart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using BKFoodCourt.Models;
 
 @{
-    ViewBag.Title = "Giỏ hàng";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
