--- a/BKFoodCourt/BKFoodCourt/Views/Admin/UpdateInfo.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Admin/UpdateInfo.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Cập nhật";
-    Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
+    Layout = "~/Views/Shared/_LayoutManager.cshtml";
 }
 @model BKFoodCourt.Models.UpdateModel
 <div class="container-fluid mt--6">
@@ -24,24 +24,26 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    @using (Html.BeginForm("UpdateInfoAction", "Customer"))
+                    @using (Html.BeginForm("UpdateInfoAction", "Admin"))
                     {
-                        <h6 class="heading-small text-muted mb-4">Thông tin người dùng</h6>
+                        <h6 class="heading-small text-muted mb-4">Thông tin manager</h6>
                         <i>(Bỏ trống mục không thay đổi.)</i>
-
+                        <br />
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
                         <div class="pl-lg-4">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label class="form-control-label">Tên</label>
-                                        @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @value=Model.Name.ToString()})
+                                        @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @value = Model.Name.ToString() })
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label class="form-control-label">Email</label>
                                         @*<input class="form-control" value=@Model.Email disabled>*@
-                                        @Html.TextBoxFor(model => model.Email, new { @class="form-control", @value=Model.Email, @readonly="readonly"})
+                                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @value = Model.Email, @readonly = "readonly" })
                                     </div>
                                 </div>
                             </div>
@@ -67,19 +69,16 @@
                                         @Html.PasswordFor(model => model.RetypePassword, new { @class = "form-control" })
                                     </div>
                                 </div>
-                                @Html.AntiForgeryToken()
-                                @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
+
                             </div>
                         </div>
-                        
+
                         <input type="submit" class="btn btn-success" value="Hoàn tất">
-                    <hr class="my-4" />
+                        <hr class="my-4" />
                     }
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
 
