Add update menu, add food, create account

--- a/BKFoodCourt/BKFoodCourt/Views/Cart/Index.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Cart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using BKFoodCourt.Models;
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Giỏ hàng";
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
