--- a/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutCook.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutCook.cshtml
@@ -120,7 +120,7 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href=@Url.Action("UserInfo","Cook")>
+                                <a class="dropdown-item" href=@Url.Action("CookInfo","Cook")>
                                     <i class="fa fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Thông tin
                                 </a>
