--- a/BKFoodCourt/BKFoodCourt/Views/Admin/CreateAccount.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Admin/CreateAccount.cshtml
@@ -1,8 +1,58 @@
 ﻿
 @{
     ViewBag.Title = "CreateAccount";
-    Layout = "~/Views/Shared/_LayoutManager.cshtml";
+    Layout = "~/Views/Shared/_LayoutManager.cshtml"; 
+    <style>
+        .form-group {
+            width: 800px;
+        }
+    </style>
 }
 
-<h2>CreateAccount</h2>
+@model BKFoodCourt.DatabaseAccess.EF.Account
+
+<div class="row" style="margin-left:10px">
+    <div class="col-md-12 text-center mb-5 site-animate">
+        <h2 class="display-4">Tạo tài khoản Vendor</h2>
+
+    </div>
+    <div class="col-md-7 mb-5 site-animate">
+        @using (Html.BeginForm("CreateAccountAction", "Admin", FormMethod.Post))
+        {
+            <div class="row">
+                <div class="form-group">
+                    <label class="form-control-label">Tên</label>
+                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @placeholder = "Tên vendor" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group">
+                    <label class="form-control-label">Email</label>
+                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = "Email" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group">
+                    <label class="form-control-label">Mật khẩu khởi tạo</label>
+                    @Html.TextBoxFor(model => model.PassWord, new { @class = "form-control", @placeholder = "Mật khẩu" })
+                </div>
+            </div>
+            <br /><br />
+            @Html.AntiForgeryToken();
+            @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary btn-lg" value="Hoàn thành">
+            </div>
+        }
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-4 site-animate">
+        <p><img src="~/Assets/img/hcmut.jpg" alt="" class="img-fluid"></p>
+        <p class="text-black">
+            Address: <br> 268 Lý Thường Kiệt, Phường 14, Quận 10 <br> Hồ Chí Minh, Việt Nam <br> <br>
+            Phone: <br> +(84) 123 456 <br> <br>
+            Email: <br> <a href="mailto:info@bkfoodcourt.com">info@bkfoodcourt.com</a>
+        </p>
+    </div>
+</div>
 
