--- a/BKFoodCourt/BKFoodCourt/Views/Admin/UpdateInfo.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Admin/UpdateInfo.cshtml
@@ -50,7 +50,7 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <label class="form-control-label">Mật khẩu cũ</label>
+                                        <label class="form-control-label">Mật khẩu hiện tại</label>
                                         @Html.PasswordFor(model => model.OldPassword, new { @class = "form-control" })
                                     </div>
                                 </div>
