--- a/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutManager.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutManager.cshtml
@@ -125,7 +125,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 @{
                                     BKFoodCourt.Models.LoginModel user = Session[BKFoodCourt.Common.CommonConstant.USER_SESSION] as BKFoodCourt.Models.LoginModel;
-                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Xin chào Admin, @user.Name</span>
+                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Xin chào Manager, @user.Name</span>
                                 }
                                 <!-- <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60"> -->
                                 <i class="fa fa-user"></i>
