--- a/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutVendor.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutVendor.cshtml
@@ -61,13 +61,18 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href=@Url.Action("UpdateMenu","Vendor")>
-                    <i class="fa fa-upload "></i>
-                    <span>Cập nhật món ăn</span>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+                    <i class="fas fa-file"></i>
+                    <span>Chỉnh sửa menu</span>
                 </a>
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href=@Url.Action("UpdateMenu","Vendor")>Cập nhật món ăn</a>
+                        <a class="collapse-item" href=@Url.Action("AddFood","Vendor")>Thêm món ăn</a>
+                    </div>
+                </div>
             </li>
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <!-- Nav Item - Charts -->
+            
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <!-- Sidebar Toggler (Sidebar) -->
