--- a/BKFoodCourt/BKFoodCourt/Views/User/Login.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/User/Login.cshtml
@@ -43,7 +43,7 @@
                                         <div class="form-group">
                                             @Html.PasswordFor(model => model.PassWord, new { @class = "form-control form-control-user", @id = "exampleInputPassword", @placeholder = "Nhập mật khẩu..." })
                                         </div>
-                                        @Html.AntiForgeryToken()
+                                        @Html.AntiForgeryToken();
                                         @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
                                         <input type="submit" class="btn btn-primary btn-user btn-block" value="Đăng nhập" />
                                         <hr>
