--- a/BKFoodCourt/BKFoodCourt/Views/Food/Detail.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Food/Detail.cshtml
@@ -7,8 +7,8 @@
 @model BKFoodCourt.DatabaseAccess.EF.Food
 
 <div class="row">
-    <div class="2-row">
-        <a href=@Url.Action("Index","Menu") class="continue">Menu</a>
+    <div class="heading cf">
+        <a href=@Url.Action("Index","Menu") class="previous">Quay lại menu</a>
     </div>
     <div class="card shadow mb-4" style="left: 100px;">
         <div class="card border-left-primary shadow h-100 py-2">
