Update Demo version 1

--- a/BKFoodCourt/BKFoodCourt/Views/Customer/NotificationDetail.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Customer/NotificationDetail.cshtml
@@ -1,18 +1,15 @@
 ﻿
 @{
-    ViewBag.Title = "OrderDetail";
+    ViewBag.Title = "NotificationDetail";
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
 @model List<BKFoodCourt.DatabaseAccess.EF.OrderDetail>
-
 @{ var tmp = Model.ElementAt(0);
     int total = 0;
 }
-
 <div class="wrap cf">
     <h1 class="projTitle">Chi tiết đơn hàng</h1>
-
     <div class="cart">
         <ul class="cartWrap">
             @foreach (var item in Model)
@@ -23,9 +20,7 @@
                             <img src=@item.Food.Url1 alt="" class="itemImg" />
                             <p class="itemNumber">@item.FoodID</p>
                             <h3>@item.Food.Name</h3>
-
                             <p> <input type="text" class="qty" readonly="readonly" placeholder="@item.Quantily" /> x @item.Food.Price đồng</p>
-
                         </div>
                         <div class="prodTotal cartSection">
                             <p>@(item.Quantily * item.Food.Price) đồng</p>
