--- a/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutManager.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutManager.cshtml
@@ -103,7 +103,7 @@
                             </div>
                         </li>
                         <!-- Nav Item - Alerts -->
-                        <li class="nav-item dropdown no-arrow mx-1">
+                        @*<li class="nav-item dropdown no-arrow mx-1">
                             <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
                                 <!-- Counter - Alerts -->
@@ -117,7 +117,7 @@
                                 <a class="dropdown-item d-flex align-items-center">Không có thông báo</a>
                                 <a class="dropdown-item text-center small text-gray-500" href="#">Hiển thị tất cả.</a>
                             </div>
-                        </li>
+                        </li>*@
 
                         <div class="topbar-divider d-none d-sm-block"></div>
                         <!-- Nav Item - User Information -->
