--- a/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutVendor.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutVendor.cshtml
@@ -69,6 +69,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href=@Url.Action("UpdateMenu","Vendor")>Cập nhật món ăn</a>
                         <a class="collapse-item" href=@Url.Action("AddFood","Vendor")>Thêm món ăn</a>
+                        <a class="collapse-item" href=@Url.Action("DeleteFood","Vendor")>Xóa món ăn</a>
                     </div>
                 </div>
             </li>
@@ -114,7 +115,7 @@
                             </div>
                         </li>
                         <!-- Nav Item - Alerts -->
-                        <li class="nav-item dropdown no-arrow mx-1">
+                        @*<li class="nav-item dropdown no-arrow mx-1">
                             <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
                                 <!-- Counter - Alerts -->
@@ -128,7 +129,7 @@
                                 <a class="dropdown-item d-flex align-items-center">Không có thông báo</a>
                                 <a class="dropdown-item text-center small text-gray-500" href="#">Hiển thị tất cả.</a>
                             </div>
-                        </li>
+                        </li>*@
 
                         <div class="topbar-divider d-none d-sm-block"></div>
                         <!-- Nav Item - User Information -->
