--- a/BKFoodCourt/BKFoodCourt/Views/Admin/CreateAccount.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Admin/CreateAccount.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "CreateAccount";
+    ViewBag.Title = "Tạo tài khoản Vendor";
     Layout = "~/Views/Shared/_LayoutManager.cshtml"; 
     <style>
         .form-group {
