--- a/BKFoodCourt/BKFoodCourt/Views/Cart/Index.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Cart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using BKFoodCourt.Models;
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Giỏ hàng";
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
@@ -31,7 +31,6 @@
                                     <h3>Tên: @cartList.cart.ElementAt(i).Key.Name</h3>
                                     <h3 style="font-size:12px">Đơn giá :@cartList.cart.ElementAt(i).Key.Price</h3>
                                 </div>
-
                                 <div class="prodTotal cartSection">
                                     <p>@((cartList.cart.ElementAt(i).Value * cartList.cart.ElementAt(i).Key.Price) / 1000).000 đồng </p>
                                 </div>
@@ -62,44 +61,46 @@
         </div>
     }
 
-    <div class="row mt-5 pt-3 d-flex">
-        <div class="col-md-6 d-flex">
-        </div>
-        <div class="col-md-6">
-            <div class="cart-detail bg-light p-3 p-md-4">
-                <h3 class="billing-heading mb-4">Phương pháp thanh toán</h3>
-
-                @using (Html.BeginForm("Payment", "Cart", FormMethod.Post))
-                {
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <div class="radio">
-                                <label>@Html.RadioButton("TypePayment", "Momo")Thanh toán qua Momo</label>
+    @if (cartList != null && cartList.cart != null && cartList.cart.Count != 0)
+    {
+        <div class="row mt-5 pt-3 d-flex">
+            <div class="col-md-6 d-flex">
+            </div>
+            <div class="col-md-6">
+                <div class="cart-detail bg-light p-3 p-md-4">
+                    <h3 class="billing-heading mb-4">Phương pháp thanh toán</h3>
+                    @using (Html.BeginForm("Payment", "Cart", FormMethod.Post))
+                    {
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <div class="radio">
+                                    <label>@Html.RadioButton("TypePayment", "Momo")Thanh toán qua Momo</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <div class="radio">
-                                <label>@Html.RadioButton("TypePayment", "Cash")Thanh toán bằng tiền mặt</label>
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <div class="radio">
+                                    <label>@Html.RadioButton("TypePayment", "Cash")Thanh toán bằng tiền mặt</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <div class="checkbox">
-                                <label>@Html.CheckBox("Accept")Tôi đã đọc và chấp nhận điều khoản và chính sách.</label>
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <div class="checkbox">
+                                    <label>@Html.CheckBox("Accept")Tôi đã đọc và chấp nhận điều khoản và chính sách.</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    @Html.AntiForgeryToken()
-                    @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
-                    <p><input type="submit" class="btn btn-primary py-3 px-4" value="Thanh toán" /></p>
-                }
-
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
+                        <p><input type="submit" class="btn btn-primary py-3 px-4" value="Thanh toán" /></p>
+                    }
+                </div>
             </div>
         </div>
-    </div>
+    }
+    
 </div>
 
 
