--- a/BKFoodCourt/BKFoodCourt/Views/Customer/Notification.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Customer/Notification.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Notification";
+    ViewBag.Title = "Thông báo";
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
