--- a/BKFoodCourt/BKFoodCourt/Views/Food/Detail.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Food/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = "Thông tin món ăn";
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 
