--- a/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutCook.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutCook.cshtml
@@ -119,7 +119,7 @@
                                 }
                                 else
                                 {
-                                    <a class="dropdown-item d-flex align-items-center">Đang có đơn hàng cần thực hiện, Cook vào vào bếp.</a>
+                                    <a href=@Url.Action("OrderList","Cook") class="dropdown-item d-flex align-items-center">Đang có đơn hàng cần thực hiện, Cook vào vào bếp.</a>
                                 }
                             </div>
                         </li>
