--- a/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutVendor.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Shared/_LayoutVendor.cshtml
@@ -69,6 +69,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href=@Url.Action("UpdateMenu","Vendor")>Cập nhật món ăn</a>
                         <a class="collapse-item" href=@Url.Action("AddFood","Vendor")>Thêm món ăn</a>
+                        <a class="collapse-item" href=@Url.Action("DeleteFood","Vendor")>Xóa món ăn</a>
                     </div>
                 </div>
             </li>
