--- a/BKFoodCourt/BKFoodCourt/Views/Admin/ReportDetail.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Admin/ReportDetail.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Thông báo";
-    Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
+    ViewBag.Title = "Chi tiết đơn hàng";
+    Layout = "~/Views/Shared/_LayoutManager.cshtml";
+    <link href="~/Assets/css/slideshow.css" rel="stylesheet">
 }
 
 @model List<BKFoodCourt.DatabaseAccess.EF.OrderDetail>
