--- a/BKFoodCourt/BKFoodCourt/Views/Payment/Index.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Payment/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Thanh toán";
     Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
 <h1 class="h3 mb-2 text-gray-800">Cảm ơn bạn đã mua hàng tại BKFood Court</h1>
