--- a/BKFoodCourt/BKFoodCourt/Views/Home/Index.cshtml
+++ b/BKFoodCourt/BKFoodCourt/Views/Home/Index.cshtml
@@ -8,17 +8,16 @@
     <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
         <img src="~/Assets/img/home-slider/slider.jpg" style="width:100%">
-        <div class="text">CHÀO MỪNG</div>
+        <div class="text"><h1>WELCOME TO BK FOOD COURT!!</h1></div>
     </div>
     <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="~/Assets/img/home-slider/slider1.jpg" style="width:100%">
-        <div class="text">Caption Two</div>
+        <img src="~/Assets/img/home-slider/slider-9.jpg" style="width:100%">
+        <div class="text"><h2>BKFC là sự kết hợp hài hòa của hiện đại và nét truyền thống Việt Nam, BKFC tạo nên sự phá cách tinh tế khi kết hợp thức ăn đường phố và phong cách nấu ăn truyền thống dân dã từ khắp vùng miền ẩm thực đa dạng, được chế biết theo lối trình bày và các kỹ thuật nấu nướng hiện đại.</h2></div>
     </div>
     <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="~/Assets/img/home-slider/slider2.jpg" style="width:100%">
-        <div class="text">Caption Three</div>
+        <img src="~/Assets/img/home-slider/slider1.jpg" style="width:100%">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
